--- a/puipui/0625_車車主題網頁_拉拉.html
+++ b/puipui/0625_車車主題網頁_拉拉.html
@@ -81,7 +81,7 @@
                 簡介：故事大綱
             </div>
             <div class="left_box01">
-                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\天竺鼠車車box01.jpg">
+                <img src="puipui_pic\天竺鼠車車box01.jpg">
             </div>
             <div class="right_box01">
                 舞台為天竺鼠變成車的世界。<br>
@@ -100,7 +100,7 @@
             <div class="pui01">     
                 <div class="puibox">  
                     <div class="pic_01">
-                        <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\馬鈴薯.jpeg">
+                        <img src="puipui_pic\馬鈴薯.jpeg">
                     </div> 
                     <div class="right_puipui01">
                         <div class="text_01">
@@ -119,7 +119,7 @@
             <div class="pui02">     
                 <div class="puibox">
                     <div class="pic_02">
-                        <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\西羅摩.jpg">
+                        <img src="puipui_pic\西羅摩.jpg">
                     </div>
                     <div class="right_puipui02">
                         <div class="text_02">
@@ -139,7 +139,7 @@
             <div class="pui03">     
                 <div class="puibox">
                     <div class="pic_01">
-                        <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\阿比.jpg">
+                        <img src="puipui_pic\阿比.jpg">
                     </div>
                     <div class="right_puipui01">
                         <div class="text_01">
@@ -159,7 +159,7 @@
             <div class="pui04">    
                 <div class="puibox">
                     <div class="pic_02">
-                        <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\泰迪.jpg">
+                        <img src="puipui_pic\泰迪.jpg">
                     </div>
                     <div class="right_puipui02">
                         <div class="text_02">
@@ -179,7 +179,7 @@
             <div class="pui05">     
                 <div class="puibox">
                     <div class="pic_01">
-                        <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\巧克力.jpg">
+                        <img src="puipui_pic\巧克力.jpg">
                     </div>
                     <div class="right_puipui01">
                         <div class="text_01">
@@ -203,13 +203,13 @@
             <div class="big_box">
                 <!--向左按鈕-->
                 <div class="leftbtn" id="prev">
-                    <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\左箭頭.png"/>
+                    <img src="puipui_pic\左箭頭.png"/>
                 </div> 
                 <div class="boxes" id="container">
                     <div class="boxesul" id="list" style="left:-1072px;">  
                         <div class="box" id="first01">
                             <a href="https://www.youtube.com/watch?v=gxwRIx47CjQ">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\04.jpg"/>
+                                <img src="puipui_pic\04.jpg"/>
                             </a>
                                 <span>第四集<br>"嚼嚼大掃除"</span>
                             <hr/>
@@ -218,7 +218,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=gxwRIx47CjQ">   
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\05.jpg"/>
+                                <img src="puipui_pic\05.jpg"/>
                             </a>
                             <span>第五集<br>"PUIPUI競速"</span>
                             <hr/>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=gxwRIx47CjQ">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\06.jpg"/>
+                                <img src="puipui_pic\06.jpg"/>
                             </a>    
                             <span>第六集<br>"殭屍和午餐"</span>
                             <hr/>
@@ -236,7 +236,7 @@
                         </div>          
                         <div class="box" id="first01">
                             <a href="https://www.youtube.com/watch?v=_6TtTRrno3E">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\01.jpg"/>
+                                <img src="puipui_pic\01.jpg"/>
                             </a>
                             <span>第一集<br>"塞車了是誰的錯？"</span>
                             <hr/>
@@ -245,7 +245,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=gxwRIx47CjQ">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\02.jpg"/>
+                                <img src="puipui_pic\02.jpg"/>
                             </a>
                             <span>第二集<br>"抓住銀行搶劫犯！"</span>
                             <hr/>
@@ -254,7 +254,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=XLicBDyo0JQ">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\03.jpg"/>
+                                <img src="puipui_pic\03.jpg"/>
                             </a>
                             <span>第三集<br>"救出貓咪大作戰"</span>
                             <hr/>
@@ -263,7 +263,7 @@
                         </div>
                         <div class="box" id="first">
                             <a href="https://www.youtube.com/watch?v=0d4nLXIansU">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\04.jpg"/>
+                                <img src="puipui_pic\04.jpg"/>
                             </a>
                             <span>第四集<br>"嚼嚼大掃除"</span>
                             <hr/>
@@ -272,7 +272,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=1cDZuQ35ns8">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\05.jpg"/>
+                                <img src="puipui_pic\05.jpg"/>
                             </a>
                             <span>第五集<br>"PUIPUI競速"</span>
                             <hr/>
@@ -281,7 +281,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=IZ5wtzhaflY">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\06.jpg"/>
+                                <img src="puipui_pic\06.jpg"/>
                             </a>
                             <span>第六集<br>"殭屍和午餐"</span>
                             <hr/>
@@ -290,7 +290,7 @@
                         </div>
                         <div class="box" id="first">
                             <a href="https://www.youtube.com/watch?v=tNCkoUdJ6_4">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\07.jpg"/>
+                                <img src="puipui_pic\07.jpg"/>
                             </a>
                             <span>第七集<br>"鼠心惶惶？洗香香！"</span>
                             <hr/>
@@ -299,7 +299,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=aLy9rRJ0ApU">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\08.jpg"/>
+                                <img src="puipui_pic\08.jpg"/>
                             </a>
                             <span>第八集<br>"天竺鼠任務"</span>
                             <hr/>
@@ -308,7 +308,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=AZnrIIsFM-E">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\09.jpg"/>
+                                <img src="puipui_pic\09.jpg"/>
                             </a>
                             <span>第九集<br>"滑滑大驚喜"</span>
                             <hr/>
@@ -317,7 +317,7 @@
                         </div>
                         <div class="box" id="first">
                             <a href="https://www.youtube.com/watch?v=TWMYkHG0Jd0">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\10.jpg"/>
+                                <img src="puipui_pic\10.jpg"/>
                             </a>
                             <span>第十集<br>"想成為英雄"</span>
                             <hr/>
@@ -326,7 +326,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=nanlbtmLE1E">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\11.jpg"/>
+                                <img src="puipui_pic\11.jpg"/>
                             </a>
                             <span>第十一集<br>"時空天竺鼠車車"</span>
                             <hr/>
@@ -335,7 +335,7 @@
                         </div>
                         <div class="box">
                             <a href="https://www.youtube.com/watch?v=vTX0Q_Cg6RQ">
-                                <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\12.jpg"/>
+                                <img src="puipui_pic\12.jpg"/>
                             </a>
                             <span>第十二集<br>"一起來！天竺鼠車車派對！"</span>
                             <hr/>
@@ -346,7 +346,7 @@
                 </div>
                 <!--向右按鈕-->
                 <div class="rightbtn" id="next" >
-                    <img src="C:\Users\user\Desktop\html\0625_響應式網頁設計與學期檢討與暑假規劃_拉拉\pic\右箭頭.png"/>
+                    <img src="puipui_pic\右箭頭.png"/>
                 </div>                    
             </div>
         </div>
