--- a/school/font_page.html
+++ b/school/font_page.html
@@ -58,8 +58,8 @@
             <p id="title">Welcome</p>
             <button id = 01 onclick="location.href='https://lala0327.github.io/school/one_random.html'">抽取一個隨機數</button><br>
             <button id = 01 onclick="location.href='https://lala0327.github.io/school/uniform.html'">均勻分布</button><br>
-            <button id = 02 onclick="location.href='https://lala0327.github.io/school/standard_normal.html'">一般常態</button><br>
-            <button id = 03 onclick="location.href='https://lala0327.github.io/school/normal.html'">標準常態</button><br>
+            <button id = 02 onclick="location.href='https://lala0327.github.io/school/standard_normal.html'">標準常態</button><br>
+            <button id = 03 onclick="location.href='https://lala0327.github.io/school/normal.html'">一般常態</button><br>
         </div>
     </body>
 </html>
