--- a/school/one_random.html
+++ b/school/one_random.html
@@ -13,7 +13,7 @@
             }
             .outside_border{
                 width:90%;
-                height: 80%;
+                height:550px;
                 background-color: #fff;  
                 text-align: center;     
                 margin:0px;    
