--- a/high_speed_rail/api_high_speed_rail.html
+++ b/high_speed_rail/api_high_speed_rail.html
@@ -174,7 +174,7 @@
                     abc:"0",
                     startstations: ["南港","台北","板橋","桃園","新竹","苗栗","台中","彰化","雲林","嘉義","台南","左營"], 
                     endstations: ["左營","台南","嘉義","雲林","彰化","台中","苗栗","新竹","桃園","板橋","台北","南港"], 
-                    ticket_type:["商務","標準","自由"]
+                    ticket_type:["標準","商務","自由"]
                 }
             }, 
             mounted () {
