--- a/school/coin_back.html
+++ b/school/coin_back.html
@@ -70,10 +70,11 @@
         </style>
     </head>
     <body>
-        <class id="title">正面機率：<input type="number" id="head_p" placeholder="請輸入正面機率" onkeypress="Enter()"></class>
-        <form  name="test" method="get" action="file:///C:/html/%E8%B3%A3%E8%BA%AB%E7%94%A8/coin_back.html"> 
-            <input id="btn" type="button" value="修改" onclick="change_p()">
-        </form>
+       <class id="title">正面機率：
+            <form  name="test" method="get" action="https://lala0327.github.io/school/coin_back.html"> 
+                <input type="number" id="head_p" placeholder="請輸入正面機率" onkeypress="Enter()"></class>
+            </form>
+        <input id="btn" type="button" value="修改" onclick="change_p()">
         <class id="p_title">目前機率為                   
             <p id="p_text">0.5</p>    
         </class>
