--- a/school/coin.html
+++ b/school/coin.html
@@ -4,6 +4,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+        <title>擲硬幣</title>
         <style>
             html,body{
                 width: 100%;
