--- a/school/nb.html
+++ b/school/nb.html
@@ -1,5 +1,6 @@
 <html>
     <head>        
+        <title>負二項分佈<title/>
         <style>    
             html,body{
                 width: 100%;
@@ -77,7 +78,7 @@
     </head>
     <body>
         <div class="outside_border">
-            <div id = "border_title"><p id="title">負二項分布</p></div>
+            <div id = "border_title"><p id="title">負二項分佈</p></div>
             <p id="text_01">輸入成功的機率：<input autofocus id="p" type="number"></p>
             <br>
             <p id="text_02">選取成功的次數：
