--- a/school/nb_get_p.html
+++ b/school/nb_get_p.html
@@ -4,6 +4,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+        <title>負二項分佈<title/>
         <style>
             html,body{
                 width:100%;
@@ -72,7 +73,7 @@
     </head>
     <body>
         <div class="outside_border" id="app">{{get()}}
-            <div id = "border_title"><p id="title">負二項分布</p></div>
+            <div id = "border_title"><p id="title">負二項分佈</p></div>
             <p id="text_02">選取成功的次數：
                 <select id="sector-list"></select>
             </p>
