--- a/school/nb.html
+++ b/school/nb.html
@@ -1,6 +1,6 @@
 <html>
     <head>        
-        <title>負二項分佈<title/>
+        <title>負二項分佈</title>
         <style>    
             html,body{
                 width: 100%;
