--- a/school/nb_get_p.html
+++ b/school/nb_get_p.html
@@ -4,7 +4,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
-        <title>負二項分佈<title/>
+        <title>負二項分佈</title>
         <style>
             html,body{
                 width:100%;
